[tool.poetry]
name = "ismabot"
version = "0.1.0"
description = "ISMA University Telegram bot"
authors = ["Sizning Ismingiz <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
asyncio = "^3.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
